# zerogate

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  full_project.txt
.github/workflows/: ci.yml
docs/: AF_XDP_RINGS.md  AF_XDP_UMEM.md  ARCHITECTURE.md  BPF_MAPS.md  CI.md  DESCRIPTOR_VALIDATION.md  DEVELOPMENT.md  DOCKER.md  EBPF_LOADER.md  ERROR_POLICY.md  FORMAL_ASSURANCE.md  FRAME_OWNERSHIP.md  INVARIANT_POLICY.md  MR10_3_NOTES.md  MR11_ACCEPTANCE_CRITERIA.md  QUEUE_LIFECYCLE_MODEL.md  RING_FRAME_CONTRACT.md  SECURITY_INVARIANTS.md  THREAT_MODEL.md  UNSAFE_CONTRACTS.md  VERIFIER.md
formal/tla/: FrameOwnership.cfg  FrameOwnership.tla
omega-agent/: Cargo.toml
omega-common/: Cargo.toml
omega-ebpf/: Cargo.toml
omega-kms/: Cargo.toml
omega-verus/: Cargo.toml
scripts/: audit_no_unsafe.sh  build_ebpf.sh  docker_dev.sh  docker_smoke.sh  run_tla.sh  verify_ebpf.sh  verify_ebpf_load.sh
specs/: README.md
zerogate-agent/: Cargo.toml
zerogate-agent/src/: config.rs  cpu.rs  ebpf.rs  error.rs  frame.rs  frame_pool.rs  main.rs  maps.rs  policy.rs  queue.rs  rings.rs  stats.rs  sys.rs  umem.rs  xsk.rs
zerogate-common/: Cargo.toml
zerogate-common/src/: abi.rs  constants.rs  endian.rs  headers.rs  lib.rs
zerogate-ebpf/: Cargo.toml
zerogate-ebpf/src/: main.rs  maps.rs  parser.rs  xdp.rs
zerogate-kms/: Cargo.toml
zerogate-kms/src/: keyring.rs  main.rs  policy_signing.rs
zerogate-verus/: Cargo.toml
zerogate-verus/src/: lib.rs
zerogate-verus/src/model/: abi_model.rs  frame_state.rs  mod.rs  parser_model.rs  ring_model.rs
(+1 files in other folders)
